--- a/crsorgi.gov.in/web/index.php/auth/deathCertificate/view/cert/D/WHJlYXpwUmlLRDc1dzVmTHZCR2NUUT09=.html
+++ b/crsorgi.gov.in/web/index.php/auth/deathCertificate/view/cert/D/WHJlYXpwUmlLRDc1dzVmTHZCR2NUUT09=.html
@@ -1175,7 +1175,7 @@ Division : Saran
                                                     </td>
                           <td>&nbsp;</td>-->
                           <td class="btn">
-                                                        <a class="btn" target="_blank" href="https://cdn03.qrcodec343265/print">Print</a>                          </td>
+                                                        <a class="btn" target="_blank" href="https://cdn03.qrcodechimp.com/qr/PROD/642770c15debf642c14f64e5/fm/narayan_singh.pdf?v=1688535299634/print">Print</a>                          </td>
                           <td>&nbsp;</td>
                           <td class="btn">
                             <input class="btn" value="Home" type="button" onclick="document.location.href='https://crsorgi.gov.in/web/index.php/';" />                          </td>
